# rellume

./: .gitignore  .gitmodules  .travis.yml  README.md  Rellume.sublime-project  meson.build  meson_options.txt
data/rellume/: cpustruct-aarch64.json  cpustruct-rv64.json  cpustruct-x86_64.json  cpustruct.json  cpustruct_parser.py  meson.build
examples/: lifter.c  meson.build  pic-x86-64.c  simple-x86-64.c
include/: llbasicblock.h  lldecoder.h  llfunc.h  llinstr.h  meson.build  opcodes.inc
include/rellume/: basicblock.h  decode-stop.inc  decoder.h  func.h  instr.h  meson.build  opcodes.inc  regs.inc  rellume.h
src/: arch.h  basicblock.cc  basicblock.h  callconv.cc  callconv.h  config.h  deferred-value.h  facet.cc  facet.h  facet.inc  function-info.h  function.cc  function.h  instr.cc  instr.h  lifter-base.cc  lifter-base.h  lifter-flags.cc  lifter-gp.cc  lifter-operand.cc  lifter-private.h  lifter-sse.cc  lifter.cc  lifter.h  llbasicblock-internal.h  llbasicblock.c  llbasicblock.cc  llcommon-internal.h  lldecoder.cc  llflags-internal.h  llflags.c  llflags.cc  llfunc.c  llfunc.cc  llfunction-internal.h  llinstr-internal.h  llinstr.c  llinstr.cc  llinstruction-callret.c  llinstruction-callret.cc  (+23 more)
src/a64/: lifter-private.h  lifter.h  main.cc  simd.cc
src/aarch64/: meson.build
src/pch/: llvm.h
src/rv64/: lifter.cc  lifter.h  meson.build
src/x86-64/: lifter-flags.cc  lifter-gp.cc  lifter-operand.cc  lifter-private.h  lifter-sse.cc  lifter.cc  lifter.h  meson.build
subprojects/: fadec.wrap
tests/: a64_branches_and_cond.txt  a64_data_proc.txt  a64_loads_stores.txt  a64_scalar_fp.txt  a64_simd.txt  cases_basic.txt  cases_modrm.txt  cases_rv64_basic.txt  cases_rv64_bitmanip.txt  cases_sse.txt  cases_string.txt  meson.build  test_assembler.cc  test_driver.cc  test_parser.py
